# mini_paste

./: Cargo.toml  LICENSE  README.md
examples/: main.rs
src/: lib.rs
src/proc_macro/: Cargo.toml  mod.rs
