[package]
name = "mini_paste"
version = "0.1.10"
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

description = "Fast-to-compile equivalent to `::paste`"
documentation = "https://docs.rs/mini_paste"
homepage = "https://crates.io/crates/mini_paste"
repository = "https://github.com/danielhenrymantilla/mini_paste"

license = "zlib"

[dependencies.proc_macro]
package = "mini_paste-proc_macro"
path = "src/proc_macro"
version = "0.1.10"

[features]
nightly = []

[package.metadata.docs.rs]
all-features = true

[workspace]
members = ["src/proc_macro"]
