[lib]
path = "mod.rs"
proc-macro = true

[package]
name = "mini_paste-proc_macro"
version = "0.1.10"
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
