[lib]
path = "mod.rs"
proc-macro = true

[package]
name = "mini_paste-proc_macro"
version = "0.1.10"
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

description = "See https://docs.rs/mini_paste"
documentation = "https://docs.rs/mini_paste"
homepage = "https://docs.rs/mini_paste"
repository = "https://github.com/danielhenrymantilla/mini_paste"

license = "Zlib"

[dependencies]
